kubernetes/apps/netbox/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
  namespace: networking
spec:
  hostnames: ["netbox.mafyuh.io"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbox
          namespace: networking
          port: 8080
